# flaggy

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
challenges/: README.md
challenges/babyheap_0ctf2017/: challenge.json
challenges/bilingual/: challenge.json
challenges/buffer_overflow_basic/: description.txt  metadata.json  vuln  vuln.c
challenges/buffer_overflow_no_strings/: Makefile  description.txt  metadata.json  vuln  vuln.c
challenges/dialects/: metadata.json
challenges/format_string_basic/: metadata.json  vuln  vuln.c
challenges/reverse_advanced/: challenge  challenge.c  metadata.json
challenges/reverse_basic/: challenge  challenge.c  metadata.json
challenges/reverse_intermediate/: challenge  challenge.c  metadata.json
challenges/skippy/: challenge.json
challenges/source_analysis/: data.txt  metadata.json  solution.txt  vulnerable.py
ctf_solver/: awsorchestrator.py  config.py
ctf_solver/agent/: dspy_agent.py
ctf_solver/containers/: exegol.py
ctf_solver/core/: challenge_manager.py  orchestrator.py  runner.py
ctf_solver/database/: db.py  schema.sql
ctf_solver/import_system/: __init__.py  cli.py  dspy_components.py  file_downloader.py  importer.py  schemas.py
ctf_solver/optimization/: __init__.py  dspy_gepa_optimizer.py
ctf_solver/scripts/: run.py  setup_db.py
ctf_solver/service/: __init__.py  client.py  constants.py  errors.py  protocol.py  server.py  supervisor.py  utils.py
ctf_solver/ui/: __init__.py  cli_presenter.py
ctf_solver/ui/textual/: __init__.py  app.py  models.py  utils.py
ctf_solver/ui/textual/data/: repo.py
ctf_solver/ui/textual/widgets/: challenge_runs_panel.py  challenges_list.py  challenges_view.py  jobs_table.py  log_panel.py
docs/: service.md
models/: agent_clean_dspy_agent.json  agent_example_optimized.json
